clarify OUI price wording

--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -30,10 +30,9 @@ Before pursuing this configuration though, it is worth considering.
   a network server. Helium Foundation hosts and operates
   [Console](/use-the-network/console) where you can easily manage devices (up to 10) for a
   organization without dealing with OUI management; you only pay for packets and
-  new accounts start with free 10,000 Data Credits. To go beyond 10 devices check out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
+  new accounts start with free 10,000 Data Credits (DC). To go beyond 10 devices check out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
 
-- An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
-  the smallest address slab).
+- An OUI costs 90,000,000 DC (U.S. $900 dollars) at a minimum (10,000,000 DC for the OUI and 80,000,000 DC for the smallest address slab).
 
   :::info
   For a video tutorial on setting up your own instance of Console, 
