clarify OUI price wording - slight change

--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -32,7 +32,7 @@ Before pursuing this configuration though, it is worth considering.
   organization without dealing with OUI management; you only pay for packets and
   new accounts start with free 10,000 Data Credits (DC). To go beyond 10 devices check out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
 
-- An OUI costs 90,000,000 DC (U.S. $900 dollars) at a minimum (10,000,000 DC for the OUI and 80,000,000 DC for the smallest address slab).
+- The initial costs to host your own Console is U.S. $900 or 90 million DC (OUI costs 10 million DC, and 80 million DC for the smallest address slab).
 
   :::info
   For a video tutorial on setting up your own instance of Console, 
