--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -19,7 +19,7 @@ If an Integration is not available please contact your provider. By default, the
 
 :::important
 
-Pre-Marketplace Integrations will continue to work as expected. However, devices or groups will need to connect to an Integration to benefit from future updates provided by the Integration developer. 
+Pre-Marketplace Integrations will continue to work as expected. However, devices or groups will need to connect to a new Community Integration to benefit from future updates provided by the Marketplace Integration developer. 
 
 :::
 
