--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -4,7 +4,7 @@ sidebar_label: Multiple Packets
 slug: /use-the-network/console/multi-packets
 ---
 
-# Multiple Packets
+# Multiple Packets 
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
@@ -12,7 +12,7 @@ Data Credits are only spent for uplinks including initial join packets. The Mult
 
 To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
 
-## Configuring Multiple Packets
+### Configuring Multiple Packets
 
 Configuring multiple packets for a device a group of devices involved two main steps:
 
