--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -8,13 +8,19 @@ slug: /use-the-network/console/multi-packets
 
 The Multiple Packets menu has been replaced with Packet Configurations.
 
-Packet Configurations allow users to specify settings that impact packet delivery and includes settings for both Multiple Packets and Preferred Hotspots. 
+Packet Configurations allow users to specify settings that impact packet delivery and includes settings for both Multiple Packets and Preferred Hotspots.
+
+:::note
+
+For a Packet Configurations setting, users can either Preferred Hotspot or Multiple Packet setting, but not both.
+
+:::
 
 ## Preferred Hotspots
 
 With this feature users can designate Hotspots as “Preferred”. If the feature is enabled, packets will ONLY be accepted by Hotspots chosen as Preferred. In the Coverage section, Hotspots must be followed first before they can be designated as Preferred.
 
-After configured, Preferred Hotspot can be applied on the Flows workspace at a device/label level; similar to the process of the Multiple Packet feature. 
+After configured, Packet Configurations can be applied on the Flows workspace at a device/label level on the Packets tab. 
 
 As this feature is designed for troubleshooting Hotspots or initial Hotspot positioning, the default setting is off. 
 
