devaddr updates and other tweaks
devaddr updates and other tweaks

--- a/docs/use-the-network/console-marketplace/console-marketplace.mdx
+++ b/docs/use-the-network/console-marketplace/console-marketplace.mdx
@@ -8,7 +8,9 @@ slug: /use-the-network/console-marketplace
 
 The Console Marketplace provides a way for Helium community members to contribute and share Console components. Initially, this includes Integrations, but over time the marketplace will expand to Decoders, and others.
 
-Console Hosting Providers can choose which components are available to end-users. Some (for example, Helium Foundation) may choose to enable all available Console components, while others may only want to provide their users access to fewer for simplicity.
+Console Hosting Providers can choose which components are available to end-users. Some (for example, Helium Foundation) may choose to enable all available Console components, while others may only want to provide their users access to fewer for simplicity. 
+
+For more information about Integrations go [here](/use-the-network/console/integrations).
 
 ## How it works overview
 
