--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -10,9 +10,9 @@ The Multiple Packets menu has been replaced with Packet Configurations.
 
 Packet Configurations allow users to specify settings that impact packet delivery and includes settings for both Multiple Packets and Preferred Hotspots.
 
-:::note
+:::important
 
-For a Packet Configurations setting, users can either Preferred Hotspot or Multiple Packet setting, but not both.
+For a Packet Configurations setting, users can either set a Preferred Hotspot or a Multiple Packet setting, but not both.
 
 :::
 
