--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -21,24 +21,22 @@ owned by the OUI. It is even possible to multiplex many devices on the same
 DevAddr at the same time, using the Message Integrity Check (MIC) to
 disambiguate.
 
+:::info
+
+Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800 devices, but results still need to be replicated and bracketed. Community members are encouraged to run their own benchmarking tests.
+Instructions [here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with Linux and Bash command-line.
+
+:::
+
 # OUI Cost
 
-The OUI is purchased with [data credits (DC)](/blockchain/transaction-fees).
-Costs are subject to change, but currently the OUI itself costs $100 worth of
-DCs and each DevAddr cost an additional $100 in DC.
+The OUI is purchased with [Data Credits (DC)](/blockchain/transaction-fees).
+Costs are subject to change, but currently the OUI itself costs US$100 worth of
+DCs and each DevAddr cost an additional US$100 in DC.
 
 DevAddr are sold in sequential blocks between 8 and 65,536 and any power of two.
-You must purchase a slab when purchasing an OUI, therefore, the minimum cost for
-an OUI is $800 for eight DevAddr's and $100 for the OUI itself.
 
-:::info
-It is possible to have _many_ devices share the same DevAddr, so even with just
-an eight address slab, potentially hundreds of devices may be hosted.
-
-This is done by using the Data frames Message Integrity Check (MIC) to
-figure out which DevAddr session of many actually sent that packet. Router
-implements this special logic.
-:::
+You must purchase a slab when purchasing an OUI, therefore, the total minimum cost is US$900 worth of Data Credits: $100 for the OUI itself and $800 for eight DevAddr's.
 
 [The OUI purchase transaction itself](https://github.com/helium/proto/blob/master/src/blockchain_txn_oui_v1.proto)
 incurs a fee based as does any other blockchain transaction; generally this will
@@ -50,7 +48,7 @@ transaction size.
 You need [the Helium wallet](https://github.com/helium/helium-wallet-rs) to go
 any further. You'll want to
 [create a wallet](https://github.com/helium/helium-wallet-rs#create-a-wallet)
-and to have at least $900 in HNT (base on current HNT Oracle pricing).
+and to have at least US$900 in HNT (based on current HNT Oracle pricing).
 
 ## Purchase the OUI
 
@@ -66,5 +64,5 @@ transaction with the endpoint above. When it is complete, you should also see yo
 
 Congratulations! You are the proud owner of a Helium Network OUI. OUIs are
 numbered sequentially, so the lower you are, the earlier you were on the
-Network!.
+Network!
 
