--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -11,14 +11,15 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # LoRaWAN On Helium
 
-The LoRaWAN Network on Helium is **compatible with all LoRaWAN devices**.
+The LoRaWAN Network on Helium is **compatible with LoRaWAN class A devices**.
 However, Helium distinguishes itself in how it treats the LoRaWAN Network Server
 (LNS).
 
 In typical LoRaWAN Networks, a central or regional LNS is managed by a single
 entity. Helium’s design for a decentralized network, however, means not only do
-we want gateways (or what we sometimes call Hotspots) to be independently owned
+we want gateways (referred to as Hotspots) to be independently owned
 and operated, but we want to enable the independent operation of the LNS.
+
 Without this, access to the network would require permission from a single
 central entity, the LNS operator of the network.
 
@@ -46,6 +47,13 @@ by the OUI operator:
 A device defined by (AppEui, DevEui) can be allocated any of the DevAddrs owned
 by the OUI. It is even possible to multiplex many devices on the same DevAddr
 at the same time, using the Message Integrity Check (MIC) to disambiguate.
+
+:::info
+
+Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800 devices, but results still need to be replicated and bracketed. Community members are encouraged to run their own benchmarking tests.
+Instructions [here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with Linux and Bash command-line.
+
+:::
 
 ### Join Request Frames and Filters
 
