--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -9,8 +9,11 @@ slug: /lorawan-on-helium/lorawan-roaming-on-helium
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-The Helium Network is the [world's largest LoRaWAN Network](https://explorer.helium.com) - and continues to grow at a staggering pace. Because of this, it becomes a very attractive network to other public and private LoRaWAN Network Server providers (LNSes) who want to extend their coverage without deploying their own infrastructure and capital. And thanks the the Helium blockchain, direct roaming integrations are very simple. Most importantly, major LNSes are already roaming with the Helium Network today, which means the public coverage the community is building is now being used by LoRa devices onboarded to other networks, and Hotspot operators get compensated in $HNT for routing these packets. 
+The Helium Network is the [world's largest LoRaWAN Network](https://explorer.helium.com) - and continues to grow at a staggering pace. Because of this, it becomes a very attractive network to other public and private LoRaWAN Network Server providers (LNSes) who want to extend their coverage without deploying their own infrastructure and capital. 
 
+And thanks to the Helium blockchain, direct roaming integrations are very simple. Most importantly, major LNSes are roaming with the Helium Network, which means the public coverage the community is building is now being used by LoRa devices onboarded to other networks, and Hotspot operators get compensated in $HNT for routing these packets. 
+
+For more information about the roaming services offering go [here](use-the-network/roaming).
 
 ## Helium Roaming Architecture
 
