--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -7,6 +7,20 @@ slug: /troubleshooting/network-troubleshooting
 
 # Network Troubleshooting
 
+With the introduction of Light Hotspots, the network requirements and recommendations have changed. Light Hotspots do not require the p2p activity to connect to each other, they now connect directly to Validators to receive Challenges and report their witness receipts.
+
+The Light Hotspot => Validator connection is a standard gRPC connection.  The default port Validators listen on is 8080, so Hotspots should be able to connect Outbound to that port. (Note Validator operators can choose whichever port they want)  
+
+For "OG" Original Helium Hotspots, firmware updates are pushed over port 443, so that port should also be open Outbound.  You should check with your manufacturer to see which port they use to push firmware updates to ensure they can be received.
+
+During the remaining transition to Light Hotspots, the Hotspots do still sync the blockchain just in case a roll-back is needed.  A Hotspot is considered "Light" after it is past block 1,350,664, though PoC participation is not dependent on being fully synced.  As such, the previous recommendation of In/Out port 44158 are still valid for the time being.  Once the transition is complete, this will no longer be necessary or have an effect. 
+
+Please also verify with your manufacturer if they require any specific ports for connecting to the Hotspots for support. For OG support, we recommend ports 22 and 2222-2233 open Outbound only. 
+
+_________________
+
+(Pre-Light Hotspot recommendations)
+
 Can't connect to the internet? Connected but can't transmit? Here are some steps
 that may help!
 
