--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -7,7 +7,7 @@ slug: /troubleshooting/network-troubleshooting
 
 # Network Troubleshooting
 
-With the introduction of Light Hotspots, the network requirements and recommendations have changed. Light Hotspots do not require the p2p activity to connect to each other, they now connect directly to Validators to receive Challenges and report their witness receipts.
+With the introduction of Light Hotspots, the network requirements and recommendations have changed. Light Hotspots do not require peer-to-peer to connect to each other - they connect directly to Validators to receive Challenges and report their witness receipts.
 
 The Light Hotspot => Validator connection is a standard gRPC connection.  The default port Validators listen on is 8080, so Hotspots should be able to connect Outbound to that port. (Note Validator operators can choose whichever port they want)  
 
