--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -15,7 +15,7 @@ Note: Validator operators can choose whichever port they want
 
 For "OG" Original Helium Hotspots, firmware updates are pushed over port 443, so that port should also be open Outbound.  You should check with your manufacturer to see which port they use to push firmware updates to ensure they can be received.
 
-During the remaining transition to Light Hotspots, the Hotspots do still sync the blockchain just in case a roll-back is needed.  A Hotspot is considered "Light" after it is past block 1,350,664, though PoC participation is not dependent on being fully synced.  As such, the previous recommendation of In/Out port 44158 is still valid for the time being.  Once the transition is complete, this will no longer be necessary or have an effect. 
+During the remaining transition to Light Hotspots, the Hotspots will continue to sync the blockchain in case a rollback is needed.  A Hotspot is considered "Light" after it is synced past block 1,350,664. Proof-of-Coverage participation is not dependent on being fully synced.  As such, the previous recommendation of In/Out port 44158 is still valid for the time being.  Once the transition is complete, this will no longer be necessary or have an effect. 
 
 Please also verify with your manufacturer if they require any specific ports for connecting to the Hotspots for support. For OG support, we recommend ports 22 and 2222-2233 open Outbound only. 
 
