--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -17,7 +17,7 @@ For "OG" Original Helium Hotspots, firmware updates are pushed over port 443, so
 
 During the remaining transition to Light Hotspots, the Hotspots will continue to sync the blockchain in case a rollback is needed.  A Hotspot is considered "Light" after it is synced past block 1,350,664. Proof-of-Coverage participation is not dependent on being fully synced.  As such, the previous recommendation of In/Out port 44158 is still valid for the time being.  Once the transition is complete, this will no longer be necessary or have an effect. 
 
-Please also verify with your manufacturer if they require any specific ports for connecting to the Hotspots for support. For OG support, we recommend ports 22 and 2222-2233 open Outbound only. 
+Please also verify with your manufacturer if they require any specific ports for connecting to the Hotspots for support. For Original Helium Hotspot support, we recommend ports 22 and 2222-2233 open Outbound only. 
 
 _________________
 
