--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -13,7 +13,7 @@ The Light Hotspot → Validator connection is a standard gRPC connection.  The d
 
 Note: Validator operators can choose whichever port they want
 
-For "OG" Original Helium Hotspots, firmware updates are pushed over port 443, so that port should also be open Outbound.  You should check with your manufacturer to see which port they use to push firmware updates to ensure they can be received.
+For Original Helium Hotspots, firmware updates are pushed over port 443, so that port should always be open Outbound.  You should check with your manufacturer to see which port they use to push firmware updates to ensure they can be received.
 
 During the remaining transition to Light Hotspots, the Hotspots will continue to sync the blockchain in case a rollback is needed.  A Hotspot is considered "Light" after it is synced past block 1,350,664. Proof-of-Coverage participation is not dependent on being fully synced.  As such, the previous recommendation of In/Out port 44158 is still valid for the time being.  Once the transition is complete, this will no longer be necessary or have an effect. 
 
