--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -11,7 +11,7 @@ With the introduction of Light Hotspots, the network requirements and recommenda
 
 The Light Hotspot → Validator connection is a standard gRPC connection.  The default port Validators listen on is 8080 so Hotspots should be able to connect Outbound to that port. 
 
-Note: Validator operators can choose whichever port they want
+Note: Validator operators can choose whichever port they want.  If a Hotspot can not connect to a Validator, the Hotspot will drop that Validator and automatically try to connect to a different one.
 
 For Original Helium Hotspots, firmware updates are pushed over port 443, so that port should always be open Outbound.  You should check with your manufacturer to see which port they use to push firmware updates to ensure they can be received.
 
