--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -23,7 +23,7 @@ quickstart [here](/use-the-network/console/quickstart).
 
 ## Objective and Requirements
 
-In this guide, you will learn:
+In this version 0.0.1 guide, you will learn:
 
 - How to setup your environment
 - How to program a basic application that will send packets over the Helium
