--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -30,7 +30,7 @@ In this version 0.0.1 guide, you will learn:
   Network
 - Verify real-time packets sent to the Helium Console via Hotspot that's in
   range
-- Setup a full [Adafruit.io](https://io.adafruit.com/) http connection with a base64 decoder. (Note: CayenneLPP with Adafruit.io is easier to setup but less flexible)
+- Setup a full [Adafruit.io](https://io.adafruit.com/) https connection with a base64 decoder. (Note: CayenneLPP with Adafruit.io is easier to setup but less flexible)
 
 
 For this example, you will need the following:
