--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -7,7 +7,7 @@ slug: /use-the-network/devices/development/arduino/lora-vision-shield/arduino
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Arduino Portenta H7 with the LoRa Vision Shield
+## LoRa Vision Shield with the Arduino Portenta
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
@@ -23,7 +23,7 @@ quickstart [here](/use-the-network/console/quickstart).
 
 ## Objective and Requirements
 
-In this version 0.0.1 guide, you will learn:
+In this version 0.0.2 of this guide, you will learn:
 
 - How to setup your environment
 - How to program a basic application that will send packets over the Helium
@@ -34,12 +34,13 @@ In this version 0.0.1 guide, you will learn:
 
 
 For this example, you will need the following:
+Power users can jump ahead to the title Arduino Library #1 MKRWAN
 
 ### Hardware
 
 - [Portenta H7](https://store-usa.arduino.cc/products/portenta-h7)
 - [LoRa Vision Shield](https://store-usa.arduino.cc/products/arduino-portenta-vision-shield-lora%C2%AE)
-- Micro USB Type B Cable -
+- Micro USB Type C Cable -
   [Example](https://www.amazon.com/AmazonBasics-Male-Micro-Cable-Black/dp/B0719H12WD/ref=sr_1_2_sspa?)
 - U.FL connector for your region. this example will use the US915MHz Antenna 
   [Example: U.FL IPEX to SMA Connector Antenna 915MHz for Lora Board](https://www.amazon.com/DIYmall-Connector-Antenna-915MHz-Lora32u4/dp/B084KVYBH5)
