Added HTML textarea to show code sketches

--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -204,7 +204,7 @@ Here is the full sketch from the link [here](https://github.com/hpssjellis/porte
 ### Portenta LoRaWan Base64 Encoded Sketch
 
 
-```
+ <br><textarea rows=10 cols=70 NOWRAP>
 /*
   Helium Send And Receive
 
@@ -419,8 +419,7 @@ void loop() {
 
 
 
-
-```
+</textarea>
 
 ### Selecting Board
 
@@ -616,7 +615,7 @@ This example is easer than the above but less flexible. The decoder and the feed
 *** CayenneLPP Portenta Example Code
 Following is the full arduino sketch from the link [here](https://github.com/hpssjellis/portenta-pro-community-solutions/blob/main/examples/dot3-portenta-vision-shields/dot33-lorawan-specific/dot334-us915-helium-mqtt-adafruit-connect/dot334-us915-helium-mqtt-adafruit-connect.ino)
 
-```
+ <br><textarea rows=10 cols=70 NOWRAP>
 
 /*
   Helium Send And Receive
@@ -841,8 +840,7 @@ void loop() {
   }  // end timerA
 
 }
-
-```
+</textarea>
 
 
 
