--- a/docs/use-the-network/devices/ready-to-use/origo/lorawan-watch.mdx
+++ b/docs/use-the-network/devices/ready-to-use/origo/lorawan-watch.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Lorawan Watch ED20W
 
-Smart watch for Lone worker,  Oil&Gas industrial, Minning, Energy and utilities, Real estate and construction, Manufacturing industrial, Transportation and logistics.
+Smart watch for Lone worker,  Oil&Gas industrial, Mining, Energy and utilities, Real estate and construction, Manufacturing industrial, Transportation and logistics.
 
 <img
   src={useBaseUrl(
